metadatafullcopy/unpackaged/objects/MRP_Case__c.object
<CustomObject>
    <fields>
        <fullName>AVG_Score__c</fullName>
        <label>AVG Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>MRP Cases</relationshipLabel>
        <relationshipName>MRP_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Activity__c</fullName>
        <label>Activity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Training Sessions</fullName>
                </value>
                <value>
                    <fullName>Job Issue</fullName>
                </value>
                <value>
                    <fullName>Performance meeting</fullName>
                </value>
                <value>
                    <fullName>On Hold Request</fullName>
                </value>
                <value>
                    <fullName>Suspension</fullName>
                </value>
                <value>
                    <fullName>Scores - CC Poms</fullName>
                </value>
                <value>
                    <fullName>Scores - Alacrity CIP</fullName>
                </value>
                <value>
                    <fullName>Scores - Moisture Mapper</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Actual_Year__c</fullName>
        <formula>text( Year__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attendees__c</fullName>
        <label>Attendees</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Carrier__c</fullName>
        <label>Carrier</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Claim_Number__c</fullName>
        <formula>Job__r.Claim__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Claim Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Delta__c</fullName>
        <formula>End_Date__c - Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Delta</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Divisions__c</fullName>
        <label>Division</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EMS</fullName>
                </value>
                <value>
                    <fullName>GC</fullName>
                </value>
                <value>
                    <fullName>Water Mitigation</fullName>
                </value>
                <value>
                    <fullName>All</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Emergency_Services_12_MTH__c</fullName>
        <label>Emergency Services 12 MTH</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Emergency_Services__c</fullName>
        <label>Emergency Services Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Employee_Status__c</fullName>
        <label>Employee Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New Employee</fullName>
                </value>
                <value>
                    <fullName>Existing Employee</fullName>
                </value>
                <value>
                    <fullName>Both New/Existing Employees</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GC__c</fullName>
        <label>GC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Job_Name__c</fullName>
        <formula>Job__r.Job_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Job</label>
        <referenceTo>ATI_Job__c</referenceTo>
        <relationshipLabel>MRP Cases</relationshipLabel>
        <relationshipName>MRP_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MIT__c</fullName>
        <label>MIT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MRP_Pre_Training_Checklist_Recieved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MRP Pre-Training Checklist Recieved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MRP_Rep__c</fullName>
        <label>MRP Rep</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Jean_Greenberg</fullName>
                    <label>Jean Greenberg</label>
                </value>
                <value>
                    <fullName>Kathryn_Campbell</fullName>
                    <label>Kathryn Campbell</label>
                </value>
                <value>
                    <fullName>Renee Baumler</fullName>
                </value>
                <value>
                    <fullName>Aaron Beck</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>January</fullName>
                </value>
                <value>
                    <fullName>February</fullName>
                </value>
                <value>
                    <fullName>March</fullName>
                </value>
                <value>
                    <fullName>April</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>June</fullName>
                </value>
                <value>
                    <fullName>July</fullName>
                </value>
                <value>
                    <fullName>August</fullName>
                </value>
                <value>
                    <fullName>September</fullName>
                </value>
                <value>
                    <fullName>October</fullName>
                </value>
                <value>
                    <fullName>November</fullName>
                </value>
                <value>
                    <fullName>December</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_Employee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Employee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Office__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Office</label>
        <referenceTo>Office__c</referenceTo>
        <relationshipLabel>MRP Cases</relationshipLabel>
        <relationshipName>MRP_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>On_Site_Offsite__c</fullName>
        <label>On Site/Offsite</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>On Site</fullName>
                </value>
                <value>
                    <fullName>Offsite</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Staffing</fullName>
                </value>
                <value>
                    <fullName>CAT</fullName>
                </value>
                <value>
                    <fullName>Capacity</fullName>
                </value>
                <value>
                    <fullName>Equipment</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Residential_12_MTH__c</fullName>
        <label>Residential 12 MTH</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Residential__c</fullName>
        <label>Residential Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Specialty_Services_12_MTH__c</fullName>
        <label>Specialty Services 12 MTH</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Specialty_Services__c</fullName>
        <label>Specialty Services Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TPA__c</fullName>
        <label>TPA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Program - Alacrity REO</fullName>
                </value>
                <value>
                    <fullName>Program - Alacrity - Resolve Consumer</fullName>
                </value>
                <value>
                    <fullName>Program - Alacrity Services</fullName>
                </value>
                <value>
                    <fullName>Program - American Emergency Services</fullName>
                </value>
                <value>
                    <fullName>Program - BrightServ</fullName>
                </value>
                <value>
                    <fullName>Program - Code Blue Network</fullName>
                </value>
                <value>
                    <fullName>Program - Cons. Services (Xactanalysis)</fullName>
                </value>
                <value>
                    <fullName>Program - Contractor Connection</fullName>
                </value>
                <value>
                    <fullName>Program - Direct Assignment</fullName>
                </value>
                <value>
                    <fullName>Program - Direct Claims Management (DCMG)</fullName>
                </value>
                <value>
                    <fullName>Program - DKI - Diamond Loss Solutions</fullName>
                </value>
                <value>
                    <fullName>Program - First Choice</fullName>
                </value>
                <value>
                    <fullName>Program - First Choice Consumer Service</fullName>
                </value>
                <value>
                    <fullName>Program - IMACC</fullName>
                </value>
                <value>
                    <fullName>Program - Innovation Property</fullName>
                </value>
                <value>
                    <fullName>Program - Lionsbridge</fullName>
                </value>
                <value>
                    <fullName>Program - NEXXUS</fullName>
                </value>
                <value>
                    <fullName>Program - Vericlaim</fullName>
                </value>
                <value>
                    <fullName>Program - Vericlaim Consumer Service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_Suspension__c</fullName>
        <label>Type of Suspension</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Workmanship</fullName>
                </value>
                <value>
                    <fullName>File Updates</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_Training__c</fullName>
        <label>Type of Training</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alacrity</fullName>
                </value>
                <value>
                    <fullName>Contractor Connection</fullName>
                </value>
                <value>
                    <fullName>IPN</fullName>
                </value>
                <value>
                    <fullName>Nexxus</fullName>
                </value>
                <value>
                    <fullName>Lionsbridge</fullName>
                </value>
                <value>
                    <fullName>Sedgwick</fullName>
                </value>
                <value>
                    <fullName>AES</fullName>
                </value>
                <value>
                    <fullName>BrightServ</fullName>
                </value>
                <value>
                    <fullName>Restoration Manager</fullName>
                </value>
                <value>
                    <fullName>Drying Applications</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_issue__c</fullName>
        <label>Type of issue</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Workmanship</fullName>
                </value>
                <value>
                    <fullName>Communication</fullName>
                </value>
                <value>
                    <fullName>Professionalism</fullName>
                </value>
                <value>
                    <fullName>Timeliness</fullName>
                </value>
                <value>
                    <fullName>Warranty</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MRP_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>X12_MTH__c</fullName>
        <label>12 MTH</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>MRP Case</label>
    <listViews>
        <fullName>Activity_w_o_Scores</fullName>
        <columns>NAME</columns>
        <columns>Office__c</columns>
        <columns>Date__c</columns>
        <columns>Attendees__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Reason__c</columns>
        <columns>Type_of_Suspension__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Activity__c</field>
            <operation>equals</operation>
            <value>Training Sessions,Job Issue,Performance meeting,On Hold Request,Suspension</value>
        </filters>
        <label>Activity w/o Scores</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>MRP Case Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MRP Cases</pluralLabel>
    <recordTypes>
        <fullName>ALACRITY_CIP</fullName>
        <active>true</active>
        <label>Scores - Alacrity CIP</label>
    </recordTypes>
    <recordTypes>
        <fullName>CC_POMS</fullName>
        <active>true</active>
        <label>Scores - CC Poms</label>
    </recordTypes>
    <recordTypes>
        <fullName>Job_Issue</fullName>
        <active>true</active>
        <label>Job Issue</label>
    </recordTypes>
    <recordTypes>
        <fullName>MOISTURE_MAPPER</fullName>
        <active>true</active>
        <label>Scores - Moisture Mapper</label>
    </recordTypes>
    <recordTypes>
        <fullName>On_Hold_Request</fullName>
        <active>true</active>
        <label>On Hold Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>Performance_Meeting</fullName>
        <active>true</active>
        <label>Performance Meeting</label>
    </recordTypes>
    <recordTypes>
        <fullName>Suspension</fullName>
        <active>true</active>
        <label>Suspension</label>
    </recordTypes>
    <recordTypes>
        <fullName>Training_Session</fullName>
        <active>true</active>
        <label>Training Session</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>